force-app/main/default/objects/InvoiceLineItem__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Invoice__r.AccountName__c</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>