force-app/main/default/objects/InvoiceLineItem__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>