force-app/main/default/objects/InvoiceLineItem__c/fields/AmountENText__c.field-meta.xml
<CustomField>
    <fullName>AmountENText__c</fullName>
    <label>Amount-EN (Text)</label>
    <type>TextArea</type>
</CustomField>