force-app/main/default/objects/InvoiceLineItem__c/fields/AmountTHText__c.field-meta.xml
<CustomField>
    <fullName>AmountTHText__c</fullName>
    <label>Amount-TH (Text)</label>
    <type>TextArea</type>
</CustomField>