force-app/main/default/objects/InvoiceLineItem__c/fields/LastIntegrationDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationDateTime__c</fullName>
    <label>Last Integration DateTime</label>
    <type>DateTime</type>
</CustomField>