force-app/main/default/objects/InvoiceLineItem__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>running ของการ item ใน invoice</description>
    <label>Line Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>