force-app/main/default/objects/InvoiceLineItem__c/fields/OpportunityPayment__c.field-meta.xml
<CustomField>
    <fullName>OpportunityPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Payment</label>
    <referenceTo>OpportunityPayment__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>