force-app/main/default/objects/InvoiceLineItem__c/fields/PaymentReceiptLineItem__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceiptLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Receipt Line Item</label>
    <referenceTo>PaymentReceiptLineItem__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>