force-app/main/default/objects/InvoiceLineItem__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>OpportunityPayment__r.Term__c</formula>
    <label>Term</label>
    <type>Text</type>
</CustomField>